old-kubernetes-cluster/coolify/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: coolify
spec:
  ports:
  - name: coolify
    port: 80
    targetPort: 8000
    protocol: TCP
